--- a/src/main/resources/templates/file-card.html
+++ b/src/main/resources/templates/file-card.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="https://www.thymeleaf.org">
+<head th:replace="fragments/head :: head"></head>
 <body>
     <div class="col file-card" th:each="userFile : ${userFiles}" th:id="${userFile.getId()} + '-card'"
          style="max-width: 320px; min-width: 320px">
