--- a/src/main/resources/templates/password-recovery.html
+++ b/src/main/resources/templates/password-recovery.html
@@ -1,60 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="https://www.thymeleaf.org">
-<head>
-  <!-- Required meta tags -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"><!-- End Required meta tags -->
-
-  <!-- CSRF tags -->
-  <meta name="_csrf" th:content="${_csrf.token}"/>
-  <meta name="_csrf_header" th:content="${_csrf.headerName}"/>
-
-  <!-- Begin SEO tag -->
-  <title> Dashboard | Looper - Bootstrap 4 Admin Theme </title>
-  <meta property="og:title" content="Dashboard">
-  <meta name="author" content="Beni Arisandi">
-  <meta property="og:locale" content="en_US">
-  <meta name="description" content="Responsive admin theme build on top of Bootstrap 4">
-  <meta property="og:description" content="Responsive admin theme build on top of Bootstrap 4">
-  <link rel="canonical" href="http://uselooper.com">
-  <meta property="og:url" content="http://uselooper.com">
-  <meta property="og:site_name" content="Looper - Bootstrap 4 Admin Theme">
-  <script type="application/ld+json">
-    {
-      "name": "Looper - Bootstrap 4 Admin Theme",
-      "description": "Responsive admin theme build on top of Bootstrap 4",
-      "author":
-      {
-        "@type": "Person",
-        "name": "Beni Arisandi"
-      },
-      "@type": "WebSite",
-      "url": "",
-      "headline": "Dashboard",
-      "@context": "http://schema.org"
-    }
-  </script><!-- End SEO tag -->
-  <!-- FAVICONS -->
-  <link rel="apple-touch-icon" sizes="144x144" href="assets/apple-touch-icon.png">
-  <link rel="shortcut icon" href="assets/favicon.ico">
-  <meta name="theme-color" content="#3063A0"><!-- End FAVICONS -->
-  <!-- GOOGLE FONT -->
-  <link href="https://fonts.googleapis.com/css?family=Fira+Sans:400,500,600" rel="stylesheet"><!-- End GOOGLE FONT -->
-  <!-- BEGIN PLUGINS STYLES -->
-  <link rel="stylesheet" href="assets/vendor/open-iconic/css/open-iconic-bootstrap.min.css">
-  <link rel="stylesheet" href="assets/vendor/fontawesome/css/all.css">
-  <link rel="stylesheet" href="assets/vendor/flatpickr/flatpickr.min.css"><!-- END PLUGINS STYLES -->
-  <!-- BEGIN THEME STYLES -->
-  <link rel="stylesheet" href="assets/stylesheets/theme.min.css" data-skin="default">
-  <link rel="stylesheet" href="assets/stylesheets/theme-dark.min.css" data-skin="dark">
-  <link rel="stylesheet" href="assets/stylesheets/custom.css"><!-- Disable unused skin immediately -->
-  <script>
-      var skin = localStorage.getItem('skin') || 'default';
-      var unusedLink = document.querySelector('link[data-skin]:not([data-skin="' + skin + '"])');
-      unusedLink.setAttribute('rel', '');
-      unusedLink.setAttribute('disabled', true);
-    </script><!-- END THEME STYLES -->
-</head>
+<head th:replace="fragments/head :: head"></head>
 <body>
 <!-- .auth -->
 <main class="auth">
@@ -91,7 +37,7 @@
   </form>
   <!-- /.auth-form -->
 
-  <footer class="auth-footer mt-5">&copy; 2018 All Rights Reserved. Loper is Responsive Admin Theme build on top of latest Bootstrap 4. <a href="#">Privacy</a> and <a href="#">Terms</a></footer>
+  <footer class="auth-footer mt-5">&copy; <span th:text="${#dates.format(#dates.createNow(), 'yyyy.')}"></span> All Rights Reserved. </footer>
 </main>
 <!-- /.auth -->
 
